fix integration test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         set +e
         output=$(carconnectivity test/integration_test/carConnectivity.json 2>&1)
-        echo "$output" | grep -q 'There was a problem with the configuration: No MQTT broker specified in config ("broker" missing)'
+        echo "$output" | grep -q 'Invalid port specified in config ("port" out of range, must be 1-65535)'
         if [ $? -ne 0 ]; then
           echo "$output"
           exit 1
