--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ authors = [
     { name = "Till Steinbach" }
 ]
 dependencies = [
-    "carconnectivity[images]>=0.5a3",
+    "carconnectivity[images]>=0.5",
     "Werkzeug~=3.1.3",
     "Flask~=3.1.0",
     "flask-login~=0.6.3",
