--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ authors = [
     { name = "Till Steinbach" }
 ]
 dependencies = [
-    "carconnectivity[images]>=0.8.1",
+    "carconnectivity[images]>=0.9",
     "Werkzeug~=3.1.3",
     "Flask~=3.1.2",
     "flask-login~=0.6.3",
@@ -25,7 +25,9 @@ dependencies = [
     "Bootstrap-Flask~=2.5.0"
 ]
 readme = "README.md"
-license = { file = "LICENSE" }
+license-files = [
+    "LICENSE",
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: MIT License",
