update license entries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,12 @@ dependencies = [
     "Bootstrap-Flask~=2.5.0"
 ]
 readme = "README.md"
+license = "MIT"
 license-files = [
     "LICENSE",
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "License :: OSI Approved :: MIT License",
     "Intended Audience :: End Users/Desktop",
     "Intended Audience :: System Administrators",
     "Programming Language :: Python :: 3.9",
